# atf

atf_metrics/config/: metrics.yaml
atf_metrics/src/atf_metrics/: __init__.py  calculate_acceleration_average.py  calculate_acceleration_average_odom.py  calculate_acceleration_max.py  calculate_acceleration_median.py  calculate_orientation_variation_average.py  calculate_orientation_variation_max.py  calculate_orientation_variation_median.py  calculate_velocity_average.py  calculate_velocity_average_odom.py  calculate_velocity_max.py  calculate_velocity_max_odom.py  calculate_velocity_median.py  calculate_velocity_median_odom.py
atf_presenter/html/js/atf_tools/: test_list.js
atf_presenter/scripts/: presenter.py
ipa_navigation_planning_atf/: CMakeLists.txt  README.md  package.xml
ipa_navigation_planning_atf/config/: bagfile_plotter_config.yaml  test_generation_config.yaml  test_suites.yaml
ipa_navigation_planning_atf/config/robot_envs/: ipa-apartment-0.yaml  ipa-apartment-short.yaml  ipa-apartment.yaml  ipa-office.yaml
ipa_navigation_planning_atf/config/robots/: raw3-1.yaml  raw3-3.yaml  robot1.yaml
ipa_navigation_planning_atf/config/test_configs/: test1.yaml  test2.yaml
ipa_navigation_planning_atf/include/ipa_navigation_planning_atf/: robot_route_recorder.h
ipa_navigation_planning_atf/launch/: application.launch  atf_bagfile_plotter.launch  robot_route_recorder.launch
ipa_navigation_planning_atf/scripts/: application.py  atf_bagfile_plotter.py
ipa_navigation_planning_atf/src/: robot_route_recorder.cpp
